修改动态 上拉下拉

--- a/res/layout/dynamic_fragment.xml
+++ b/res/layout/dynamic_fragment.xml
@@ -8,12 +8,12 @@
 	<com.timetalent.client.ui.view.PullToRefreshView
 	    android:id="@+id/main_pull_refresh_view"
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
+	    android:layout_height="match_parent"
 	    android:orientation="vertical" >
 		<ListView
 		    android:id="@+id/lv_dynamic"
 		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
+		    android:layout_height="match_parent"
 		    android:layout_marginTop="10dp" >
 		</ListView>
 	</com.timetalent.client.ui.view.PullToRefreshView>
