--- a/res/layout/my_yirenziliaomobanhead.xml
+++ b/res/layout/my_yirenziliaomobanhead.xml
@@ -514,14 +514,6 @@
                             android:layout_height="wrap_content" >
                         </ListView>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/spilt_line_color"
-                            android:orientation="vertical" >
-                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -535,9 +527,10 @@
                         android:id="@+id/TextView03"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/new_size_3"
+                        android:layout_marginTop="5dp"
+                        android:text="我的代言"
                         android:textColor="@color/color_2"
-                        android:text="我的代言" />
+                        android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -545,7 +538,14 @@
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
                         android:orientation="vertical" >
-
+<LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/spilt_line_color"
+                            android:orientation="vertical" >
+                        </LinearLayout>
                         <TextView
                             android:id="@+id/TextView04"
                             android:layout_width="match_parent"
