--- a/res/layout/near_yirenxiangqingmobanhead.xml
+++ b/res/layout/near_yirenxiangqingmobanhead.xml
@@ -519,14 +519,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" >
                         </ListView>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/spilt_line_color"
-                            android:orientation="vertical" >
-                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -540,9 +532,10 @@
                         android:id="@+id/TextView03"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="她的代言"
                         android:textColor="@color/color_2"
-            android:textSize="@dimen/new_size_3"
-                        android:text="她的代言" />
+                        android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -550,7 +543,14 @@
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
                         android:orientation="vertical" >
-
+<LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/spilt_line_color"
+                            android:orientation="vertical" >
+                        </LinearLayout>
                         <TextView
                             android:id="@+id/tvdaiyan"
                             android:layout_width="match_parent"
