--- a/res/layout/my_renzheng.xml
+++ b/res/layout/my_renzheng.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="93"
         android:background="@color/bggray"
         android:orientation="vertical" >
@@ -57,6 +57,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:background="@color/white"
                 android:gravity="bottom" >
 
                 <ImageView
@@ -90,9 +93,10 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/white"
                 android:orientation="vertical" >
 
                 <LinearLayout
@@ -113,7 +117,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
                         android:background="@null"
                         android:hint="必填" >
 
@@ -123,8 +126,10 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp" >
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp" 
+                    android:paddingLeft="10dp"
+                    >
 
                     <TextView
                         android:id="@+id/textView2"
@@ -139,7 +144,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
                         android:background="@null"
                         android:hint="必填" />
                 </LinearLayout>
