--- a/res/layout/register_first_layout.xml
+++ b/res/layout/register_first_layout.xml
@@ -35,6 +35,7 @@
                     android:drawablePadding="10dp"
                     android:ems="20"
                     android:focusable="true"
+                    android:singleLine="true"
                     android:hint="@string/login_hint_username"
                     android:textColorHint="@color/color_4"
                     android:textSize="@dimen/new_size_3" >
