--- a/res/layout/near_fragment.xml
+++ b/res/layout/near_fragment.xml
@@ -6,11 +6,17 @@
 
     <include layout="@layout/main_top_layout" />
 
-    <ListView
+<com.timetalent.client.ui.view.PullToRefreshView
+	    android:id="@+id/main_pull_refresh_view"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical" >
+		<ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="93" >
     </ListView>
-
+	</com.timetalent.client.ui.view.PullToRefreshView>
+    
 </LinearLayout>
