--- a/res/layout/my_fansziliaobianjihead.xml
+++ b/res/layout/my_fansziliaobianjihead.xml
@@ -127,8 +127,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:gravity="center_vertical"
-                android:visibility="gone" >
+                android:gravity="center_vertical" >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -141,7 +140,7 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="3dp"
                         android:layout_weight="1"
-                        android:text="我的动态" />
+                        android:text="" />
 
                     <TextView
                         android:id="@+id/tvfeed"
@@ -156,8 +155,8 @@
 
                 <ImageView
                     android:id="@+id/imghead"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp" />
 
@@ -173,7 +172,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/color_3"
                     	android:textSize="@dimen/new_size_2"
-                        android:text="" />
+                        android:text="点击更新头像" />
 
                     <TextView
                         android:id="@+id/textView21"
