--- a/res/layout/my_yirenziliaobianjihead.xml
+++ b/res/layout/my_yirenziliaobianjihead.xml
@@ -127,8 +127,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:gravity="center_vertical"
-                android:visibility="gone" >
+                android:gravity="center_vertical" >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -141,9 +140,7 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="3dp"
                         android:layout_weight="1"
-                        android:textSize="@dimen/new_size_3"
-                        android:textColor="@color/color_2"
-                        android:text="我的动态" />
+                        android:text="" />
 
                     <TextView
                         android:id="@+id/tvfeed"
@@ -151,26 +148,42 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:text=""
-                        android:textSize="@dimen/new_size_2"
+            android:textSize="@dimen/new_size_2"
                         android:textColor="@color/bt_red" />
 
                 </LinearLayout>
 
                 <ImageView
                     android:id="@+id/imghead"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp" />
 
-                <TextView
-                    android:id="@+id/tvcontent"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textColor="@color/color_3"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/tvcontent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/color_3"
                     	android:textSize="@dimen/new_size_2"
-                    android:text="" />
+                        android:text="点击更新头像" />
+
+                    <TextView
+                        android:id="@+id/textView21"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text=" "
+                        android:textColor="@color/color_4"
+                    android:textSize="@dimen/new_size_1" />
+
+                </LinearLayout>
 
                 <ImageView
                     android:id="@+id/imageView10"
