改头像布局

--- a/res/layout/my_main_fans.xml
+++ b/res/layout/my_main_fans.xml
@@ -32,8 +32,8 @@
 
                     <ImageView
                         android:id="@+id/imghead"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="20dp"
