--- a/res/layout/my_yirenziliaomobanhead.xml
+++ b/res/layout/my_yirenziliaomobanhead.xml
@@ -153,8 +153,8 @@
 
                 <ImageView
                     android:id="@+id/imghead"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp" />
 
